- added tail functions (caf_io_tail)

--- a/caffeine/test/CMakeLists.txt
+++ b/caffeine/test/CMakeLists.txt
@@ -90,8 +90,12 @@ option (CAFFEINE_DEBUG
 
 ### operating systems
 if (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
-    set (CFLAGS_DEFAULT "${CFLAGS_DEFAULT} -D_GNU_SOURCE")
+    set (CFLAGS_DEFAULT "${CFLAGS_DEFAULT} -D_GNU_SOURCE -DLINUX_SYSTEM=1")
 endif (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
+
+if (${CMAKE_SYSTEM_NAME} MATCHES "FreeBSD|NetBSD|OpenBSD")
+    set (CFLAGS_DEFAULT "${CFLAGS_DEFAULT} -DBSD_SYSTEM=1")
+endif (${CMAKE_SYSTEM_NAME} MATCHES "FreeBSD|NetBSD|OpenBSD")
 
 ### debug caffeine
 if (CAFFEINE_DEBUG)
