- resolved bugs in event handling with kevent - resolved bugs in offset resolving on caf_tail - added CAF_DEBUG macro - changed default optimizing flags to prescott

--- a/caffeine/test/CMakeLists.txt
+++ b/caffeine/test/CMakeLists.txt
@@ -79,7 +79,7 @@ set (CAF_IO_TAIL_SRCS
 
 ### compile flags
 set (CFLAGS_DEFAULT
-        "-Wall -Wextra -Wshadow -pedantic -std=c99 -march=athlon-xp -O2")
+        "-Wall -Wextra -Wshadow -pedantic -std=c99 -march=prescott -O2")
 
 set (CFLAGS_DEBUG
         "-DCAFFEINE_DEBUG -g3")
