--- a/caffeine/src/CMakeLists.txt
+++ b/caffeine/src/CMakeLists.txt
@@ -39,6 +39,7 @@ set (CAFFEINE_SRCS
     caf_data_lstdlc.c
     caf_data_mem.c
     caf_data_pidfile.c
+    caf_hash_str.c
     caf_io_file.c
     caf_io_tail.c
     caf_io_net.c
@@ -75,6 +76,7 @@ set (CAFFEINE_HEADERS
     caf_data_lstdlc.h
     caf_data_mem.h
     caf_data_pidfile.h
+    caf_hash_str.h
     caf_io_core.h
     caf_io_tail.h
     caf_io_net.h
