--- a/caffeine/caf/CMakeLists.txt
+++ b/caffeine/caf/CMakeLists.txt
@@ -43,6 +43,7 @@ set (CAFFEINE_HEADERS
     caf_data_string.h
     caf_data_struct.h
     caf_data_var.h
+    caf_dsm.h
     caf_evt.h
     caf_evt_fio.h
     caf_evt_nio.h
