- eliminated bugs un DSM - added DSM unitary tests

--- a/caffeine/test/CMakeLists.txt
+++ b/caffeine/test/CMakeLists.txt
@@ -57,6 +57,10 @@ set (CAF_HASH_STR_SRCS
 set (CAF_HASHTABLE_SRCS
         caf_hashtable.c)
 
+### dsm test sources
+set (CAF_DSM_SRCS
+        caf_dsm.c)
+
 ### pidfile test sources
 set (CAF_PIDFILE_SRCS
         caf_pidfile.c)
@@ -144,6 +148,11 @@ set_source_files_properties (
         COMPILE_FLAGS "${CFLAGS_PROJECT}")
 
 set_source_files_properties (
+        ${CAF_DSM_SRCS}
+        PROPERTIES
+        COMPILE_FLAGS "${CFLAGS_PROJECT}")
+
+set_source_files_properties (
         ${CAF_HASH_STR_SRCS}
         PROPERTIES
         COMPILE_FLAGS "${CFLAGS_PROJECT}")
@@ -197,6 +206,7 @@ add_executable (caf_lstdl ${CAF_LSTDL_SRCS})
 add_executable (caf_lstdlc ${CAF_LSTDLC_SRCS})
 add_executable (caf_lstc ${CAF_LSTC_SRCS})
 add_executable (caf_buffer ${CAF_BUFFER_SRCS})
+add_executable (caf_dsm ${CAF_DSM_SRCS})
 add_executable (caf_hash_str ${CAF_HASH_STR_SRCS})
 add_executable (caf_hashtable ${CAF_HASHTABLE_SRCS})
 add_executable (caf_tail ${CAF_IO_TAIL_SRCS})
@@ -207,3 +217,4 @@ add_executable (caf_pth_key ${CAF_PTH_KEY_SRCS})
 add_executable (caf_mutex ${CAF_PTH_MUTEX_SRCS})
 add_executable (caf_rwlock ${CAF_PTH_RWLOCK_SRCS})
 add_executable (caf_tail ${CAF_IO_TAIL_SRCS})
+
