- removed minor compile warnings in tests - XXX: compile warning on tests needs removing

--- a/caffeine/test/CMakeLists.txt
+++ b/caffeine/test/CMakeLists.txt
@@ -3,6 +3,7 @@ project(caffeine C)
 
 ### macro inclusions
 include(CheckSymbolExists)
+include(CheckFunctionExists)
 include(CheckIncludeFiles)
 include(CheckTypeSize)
 include(FindThreads)
