- XXX: pending corrections over base64 encoding/decoding

--- a/caffeine/test/CMakeLists.txt
+++ b/caffeine/test/CMakeLists.txt
@@ -90,6 +90,10 @@ set (CAF_PTH_MUTEX_SRCS
 set (CAF_PTH_RWLOCK_SRCS
         caf_mutex.c)
 
+### base64 test sources
+set (CAF_BASE64_SRCS
+        caf_base64.c)
+
 ### thread mutex test sources
 set (CAF_IO_TAIL_SRCS
         caf_tail.c)
@@ -198,6 +202,11 @@ set_source_files_properties (
         PROPERTIES
         COMPILE_FLAGS "${CFLAGS_PROJECT}")
 
+set_source_files_properties (
+        ${CAF_BASE64_SRCS}
+        PROPERTIES
+        COMPILE_FLAGS "${CFLAGS_PROJECT}")
+
 if (CMAKE_USE_PTHREADS_INIT)
     LINK_LIBRARIES ("${CMAKE_THREAD_LIBS_INIT}")
 endif (CMAKE_USE_PTHREADS_INIT)
@@ -218,4 +227,5 @@ add_executable (caf_pth_key ${CAF_PTH_KEY_SRCS})
 add_executable (caf_mutex ${CAF_PTH_MUTEX_SRCS})
 add_executable (caf_rwlock ${CAF_PTH_RWLOCK_SRCS})
 add_executable (caf_tail ${CAF_IO_TAIL_SRCS})
+add_executable (caf_base64 ${CAF_BASE64_SRCS})
 
