- added base encoding over files tests and routines. - corrected bugs on base encoding.

--- a/caffeine/test/CMakeLists.txt
+++ b/caffeine/test/CMakeLists.txt
@@ -94,6 +94,10 @@ set (CAF_PTH_RWLOCK_SRCS
 set (CAF_BASE64_SRCS
         caf_base64.c)
 
+### base64 test sources
+set (CAF_BASE64_FILE_SRCS
+        caf_base64_file.c)
+
 ### thread mutex test sources
 set (CAF_IO_TAIL_SRCS
         caf_tail.c)
@@ -207,6 +211,11 @@ set_source_files_properties (
         PROPERTIES
         COMPILE_FLAGS "${CFLAGS_PROJECT}")
 
+set_source_files_properties (
+        ${CAF_BASE64_FILE_SRCS}
+        PROPERTIES
+        COMPILE_FLAGS "${CFLAGS_PROJECT}")
+
 if (CMAKE_USE_PTHREADS_INIT)
     LINK_LIBRARIES ("${CMAKE_THREAD_LIBS_INIT}")
 endif (CMAKE_USE_PTHREADS_INIT)
@@ -228,4 +237,5 @@ add_executable (caf_mutex ${CAF_PTH_MUTEX_SRCS})
 add_executable (caf_rwlock ${CAF_PTH_RWLOCK_SRCS})
 add_executable (caf_tail ${CAF_IO_TAIL_SRCS})
 add_executable (caf_base64 ${CAF_BASE64_SRCS})
+add_executable (caf_base64_file ${CAF_BASE64_FILE_SRCS})
 
