- added documentation. - reorganized module documentation.

--- a/caffeine/CMakeLists.txt
+++ b/caffeine/CMakeLists.txt
@@ -12,7 +12,8 @@ include(FindDoxygen)
 if (EXISTS "${DOXYGEN}")
     if (EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/doc.cfg")
         set (DOXYGEN_CONFIG_FILE "${CMAKE_CURRENT_SOURCE_DIR}/doc.cfg")
-        add_custom_target ("documentation" "${DOXYGEN}" "${DOXYGEN_CONFIG_FILE}")
+        add_custom_target ("updoc" "${DOXYGEN}" "-u ${DOXYGEN_CONFIG_FILE}")
+        add_custom_target ("doc" "${DOXYGEN}" "${DOXYGEN_CONFIG_FILE}")
     endif (EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/doc.cfg")
 endif (EXISTS "${DOXYGEN}")
 
