- added DSO module

--- a/caffeine/caf/CMakeLists.txt
+++ b/caffeine/caf/CMakeLists.txt
@@ -47,6 +47,7 @@ set (CAFFEINE_HEADERS
     caf_data_struct.h
     caf_data_var.h
     caf_dsm.h
+    caf_dso.h
     caf_evt.h
     caf_evt_fio.h
     caf_evt_nio.h
