--- a/caffeine/caf/CMakeLists.txt
+++ b/caffeine/caf/CMakeLists.txt
@@ -46,6 +46,7 @@ set (CAFFEINE_HEADERS
     caf_data_struct.h
     caf_dsm.h
 	caf_ssm.h
+	caf_psm.h
     caf_dso.h
     caf_evt.h
     caf_evt_fio.h
